feat: hub plugin